--- a/style.css
+++ b/style.css
@@ -176,4 +176,42 @@ body {
   height: 100vh; /* Ensure container covers the full viewport height 
 */
 }
-/* Responsiveness */
+/*Modal*/
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40%;
+  height: 40%;
+  background-color: var(--light-bg);
+  padding: 6rem;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem var(--dark-bg);
+  z-index: 10;
+  border: 5px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.close {
+  position: absolute;
+  top: -2rem;
+  right: -0.5rem;
+  font-size: 7rem;
+  color: var(--dark-bg);
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+.modal > h1 {
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+  padding: 0;
+  margin: 0;
+}
+.hidden {
+  display: none;
+}
