--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@400;700&display=swap');
+
 :root {
   --dark-bg: #1b4242;
   --med-bg: #5c8374;
   --light-bg: #9ec8b9;
 }
+
 * {
   box-sizing: border-box;
 }
@@ -29,28 +31,32 @@ body {
   }
 }
 
-/* player scorecard*/
-/*.player {
-  width: 300px;
-  height: 300px;
-  background-color: var(--dark-bg);
-  border: 4px solid black;
-  border-radius: 8px;
-  font-weight: 400;
-  color: snow;
-  font-size: 3.5em;
-  position: absolute;
-  top: 50%;
-  left: 800px;
-  transform: translateY(-50%);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}*/
+.container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto auto auto auto;
+  padding: 5px;
+  gap: 30px;
+  justify-content: center;
+  align-content: center;
+}
+
+.player {
+  grid-column: 2 / span 1;
+  grid-row: 2;
+}
+
+.cpu {
+  grid-column: 3 / 3;
+  grid-row: 2;
+}
+
 .player,
 .cpu {
-  width: 300px; /* Adjust width as needed */
-  height: 300px; /* Adjust height as needed */
+  width: 300px;
+  /* Adjust width as needed */
+  height: 300px;
+  /* Adjust height as needed */
   background-color: var(--dark-bg);
   border: 4px solid black;
   border-radius: 8px;
@@ -58,82 +64,33 @@ body {
   text-align: center;
   color: snow;
   font-size: 3.5em;
-  position: absolute;
-  top: 55%; /* Position at vertical center */
-  transform: translateY(-50%); /* Center vertically */
-}
-
-.player {
-  left: 60%; /* Adjust horizontal position as needed */
-}
-.cpu {
-  right: 60%; /* Adjust horizontal position as needed */
 }
 
 .spacer {
   width: 100%;
   height: 20px;
-
   background-color: snow;
   margin-top: 10px;
 }
 
-/*.cpu {
-  width: 300px;
-  height: 300px;
-  background-color: var(--dark-bg);
-  border: 4px solid black;
-  border-radius: 8px;
-  font-weight: 400;
+.player--title {
+  text-shadow: 2px 2px #000, 2px 2px #000;
   color: snow;
-  font-size: 3.5em;
-  position: absolute;
-  top: 50%;
-  right: 800px;
-  transform: translateY(-50%);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}*/
-.player--score {
-  display: flex;
-  font-weight: 400;
-  font-size: 8rem;
-  justify-content: center;
-  align-content: center;
-  font-family: Bebas Neue;
+  margin-top: 24%;
 }
 
+.cpu--title {
+  text-shadow: 2px 2px #000, 2px 2px #000;
+  color: snow;
+  margin-bottom: 30%;
+}
+
+.player--score,
 .cpu--score {
   display: flex;
   font-weight: 400;
   font-size: 8rem;
   justify-content: center;
-  align-content: center;
-  font-family: Bebas Neue;
-}
-
-.cpu--title,
-.player--title {
-  text-shadow: 2px 2px #000, 2px 2px #000;
-  color: snow;
-  display: flex;
-  flex-direction: row;
-  position: absolute;
-  bottom: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-/*Player buttons*/
-.player--btns {
-  display: flex;
-  flex-direction: row;
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-top: 600px;
 }
 
 .rock--btn,
@@ -154,36 +111,33 @@ body {
   border: 4px solid black;
 }
 
-.cpu--choice {
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translateX(-50%);
+.player--btns,
+.player--title {
+  grid-column: 1 / 5;
+  grid-row: 3;
+  gap: 15px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  justify-self: center;
+  padding: 50px;
 }
 
-.rock--btn:hover,
-.paper--btn:hover,
-.scissors--btn:hover {
-  background-color: var(--dark-bg);
-}
-.container {
+.cpu--choice,
+.cpu--title {
+  grid-column: 1 / 5;
+  grid-row: 1;
+  gap: 15px;
   display: flex;
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-  height: 100vh; /* Ensure container covers the full viewport height 
-*/
+  align-self: center;
+  justify-self: center;
 }
-/*Modal*/
+
 .modal {
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 40%;
-  height: 40%;
+  width: 400px;
+  height: 400px;
   background-color: var(--light-bg);
   padding: 6rem;
   border-radius: 5px;
@@ -221,9 +175,8 @@ body {
 }
 
 .resetBtn {
-  position: relative;
-  bottom: 30px;
-  left: 46.25%;
+  grid-column: 1 / 5;
+  grid-row: 4;
   width: 12rem;
   height: 3rem;
   background-color: var(--light-bg);
@@ -232,9 +185,16 @@ body {
   font-family: 'Bebas Neue', sans-serif;
   font-size: x-large;
   color: azure;
-  transform: translateX(-50%, -50%);
+  justify-self: center;
+  align-self: center;
 }
 
 .resetBtn:hover {
+  background-color: var(--dark-bg);
+}
+
+.rock--btn:hover,
+.paper--btn:hover,
+.scissors--btn:hover {
   background-color: var(--dark-bg);
 }
