--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@ body {
 
 .player,
 .cpu {
-  width: 300px;
+  min-width: 300px;
   /* Adjust width as needed */
-  height: 300px;
+  min-height: 300px;
   /* Adjust height as needed */
   background-color: var(--dark-bg);
   border: 4px solid black;
@@ -76,13 +76,13 @@ body {
 .player--title {
   text-shadow: 2px 2px #000, 2px 2px #000;
   color: snow;
-  margin-top: 24%;
+  margin-top: 25%;
 }
 
 .cpu--title {
   text-shadow: 2px 2px #000, 2px 2px #000;
   color: snow;
-  margin-bottom: 30%;
+  margin-bottom: 25%;
 }
 
 .player--score,
@@ -118,7 +118,7 @@ body {
   gap: 15px;
   display: flex;
   justify-self: center;
-  padding: 50px;
+  align-self: flex-start;
 }
 
 .cpu--choice,
@@ -127,7 +127,7 @@ body {
   grid-row: 1;
   gap: 15px;
   display: flex;
-  align-self: center;
+  align-self: end;
   justify-self: center;
 }
 
@@ -197,4 +197,40 @@ body {
 .paper--btn:hover,
 .scissors--btn:hover {
   background-color: var(--dark-bg);
+}
+@media (max-width: 600px) {
+  .container {
+    grid-template-rows: auto auto auto auto auto auto auto;
+    width: 80%;
+    max-width: 500px;
+    margin: 0 auto;
+  }
+  .player {
+    grid-column: 1 / span 4;
+    grid-row: 4;
+  }
+
+  .cpu {
+    grid-column: 1 / span 4;
+    grid-row: 3;
+  }
+  .cpu--choice {
+    grid-row: 2;
+  }
+  .cpu--title {
+    margin: 0;
+  }
+
+  .player--title {
+    margin: 0;
+    grid-row: 5;
+  }
+  .player--btns {
+    grid-row: 6;
+  }
+
+  .resetBtn {
+    margin: 0;
+    grid-row: 7;
+  }
 }
